Change Level 1 map (arena)

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -4,7 +4,7 @@ ProjectName=Top Down BP Game Template
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
-BuildConfiguration=PPBC_Development
+BuildConfiguration=PPBC_Debug
 StagingDirectory=(Path="")
 FullRebuild=False
 ForDistribution=False
@@ -32,7 +32,7 @@ IncludeCrashReporter=False
 InternationalizationPreset=English
 -CulturesToStage=en
 +CulturesToStage=en
-bCookAll=False
+bCookAll=True
 bCookMapsOnly=False
 bCompressed=False
 bEncryptIniFiles=False
@@ -86,5 +86,4 @@ bSkipMovies=False
 +MapsToCook=(FilePath="/Game/Maps/Level_03")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
-
 
