Config the balance

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -63,7 +63,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Game/Blueprints/BP_CustomGameInstance.BP_CustomGameInstance_C
-GameDefaultMap=/Game/Maps/Level_01.Level_01
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/Blueprints/BP_CustomGameMode_Base.BP_CustomGameMode_Base_C
 GlobalDefaultServerGameMode=None
